@@ -392,4 +392,8 @@
   - added counter differential per time in 81_M232Counter.pm, commandref.html
     updated
 
+- Thu Mar 29 2009 (MartinH)
+  - pgm3: bugfix, format table for userdef
+  - pgm3: feature X10_support, taillogorder optional with date
+  
 
